--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -12,10 +12,10 @@
   "devDependencies": {
     "@latticexyz/common": "2.0.13-main-e0c9eaaf2",
     "@latticexyz/dev-tools": "2.0.13-main-e0c9eaaf2",
+    "@latticexyz/protocol-parser": "2.0.13-main-e0c9eaaf2",
     "@latticexyz/recs": "2.0.13-main-e0c9eaaf2",
     "@latticexyz/schema-type": "2.0.13-main-e0c9eaaf2",
     "@latticexyz/services": "2.0.0-next.14",
-    "@latticexyz/protocol-parser": "2.0.13-main-e0c9eaaf2",
     "@latticexyz/store-sync": "2.0.13-main-e0c9eaaf2",
     "@latticexyz/utils": "2.0.13-main-e0c9eaaf2",
     "@latticexyz/world": "2.0.13-main-e0c9eaaf2",
@@ -26,12 +26,13 @@
     "svelte": "5.0.0-next.155",
     "svelte-check": "^3.6.0",
     "tslib": "^2.4.1",
-    "viem": "2.9.20",
+    "viem": "^2.12",
     "vite": "^5.0.3"
   },
   "type": "module",
   "dependencies": {
     "@supabase/supabase-js": "^2.39.3",
+    "jsonwebtoken": "^9.0.2",
     "rxjs": "7.5.5"
   }
 }
