--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -22,9 +22,12 @@
     "@sveltejs/adapter-auto": "^3.0.0",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "autoprefixer": "^10.4.19",
     "contracts": "workspace:*",
+    "postcss": "^8.4.38",
     "svelte": "5.0.0-next.155",
     "svelte-check": "^3.6.0",
+    "tailwindcss": "^3.4.0",
     "tslib": "^2.4.1",
     "viem": "^2.12",
     "vite": "^5.0.3"
@@ -34,6 +37,7 @@
     "@supabase/supabase-js": "^2.39.3",
     "@types/jsonwebtoken": "^9.0.6",
     "jsonwebtoken": "^9.0.2",
-    "rxjs": "7.5.5"
+    "rxjs": "7.5.5",
+    "tailwind-merge": "^2.3.0"
   }
 }
