--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -34,6 +34,7 @@
   },
   "type": "module",
   "dependencies": {
+    "@neoconfetti/svelte": "^1.0.0",
     "@supabase/supabase-js": "^2.39.3",
     "@types/jsonwebtoken": "^9.0.6",
     "jsonwebtoken": "^9.0.2",
