--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -37,6 +37,8 @@
     "@neoconfetti/svelte": "^1.0.0",
     "@supabase/supabase-js": "^2.39.3",
     "@types/jsonwebtoken": "^9.0.6",
+    "@wagmi/connectors": "^5.1.1",
+    "@wagmi/core": "^2.13.1",
     "jsonwebtoken": "^9.0.2",
     "prettier": "^3.3.2",
     "prettier-plugin-svelte": "^3.2.2",
