--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -8,8 +8,11 @@
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
-    "moduleResolution": "node",
-    "esModuleInterop": true
+    "incremental": true,
+    "composite": true,
+    "moduleResolution": "Bundler",
+    "esModuleInterop": true,
+    "isolatedModules": true
   },
-  "exclude": ["node_modules", ".svelte-kit", "../_client_old"]
+  "exclude": ["node_modules", ".svelte-kit", "../_client_old", "../contracts"]
 }
