Mud upgrade client

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -10,15 +10,15 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
   },
   "devDependencies": {
-    "@latticexyz/common": "2.0.13-main-e0c9eaaf2",
-    "@latticexyz/dev-tools": "2.0.13-main-e0c9eaaf2",
-    "@latticexyz/protocol-parser": "2.0.13-main-e0c9eaaf2",
-    "@latticexyz/recs": "2.0.13-main-e0c9eaaf2",
-    "@latticexyz/schema-type": "2.0.13-main-e0c9eaaf2",
+    "@latticexyz/common": "2.2.3-main-5277399692c805c8b2b80274888bad3a7e527048",
+    "@latticexyz/dev-tools": "2.2.3-main-5277399692c805c8b2b80274888bad3a7e527048",
+    "@latticexyz/protocol-parser": "2.2.3-main-5277399692c805c8b2b80274888bad3a7e527048",
+    "@latticexyz/recs": "2.2.3-main-5277399692c805c8b2b80274888bad3a7e527048",
+    "@latticexyz/schema-type": "2.2.3-main-5277399692c805c8b2b80274888bad3a7e527048",
     "@latticexyz/services": "2.0.0-next.14",
-    "@latticexyz/store-sync": "2.0.13-main-e0c9eaaf2",
-    "@latticexyz/utils": "2.0.13-main-e0c9eaaf2",
-    "@latticexyz/world": "2.0.13-main-e0c9eaaf2",
+    "@latticexyz/store-sync": "2.2.3-main-5277399692c805c8b2b80274888bad3a7e527048",
+    "@latticexyz/utils": "2.2.3-main-5277399692c805c8b2b80274888bad3a7e527048",
+    "@latticexyz/world": "2.2.3-main-5277399692c805c8b2b80274888bad3a7e527048",
     "@sveltejs/adapter-auto": "^3.0.0",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
@@ -30,7 +30,7 @@
     "svelte-check": "^3.6.0",
     "tailwindcss": "^3.4.0",
     "tslib": "^2.4.1",
-    "viem": "^2.12",
+    "viem": "^2.19.8",
     "vite": "^5.0.3"
   },
   "type": "module",
