--- a/package.json
+++ b/package.json
@@ -11,12 +11,9 @@
     "test": "pnpm recursive run test"
   },
   "devDependencies": {
-    "@latticexyz/cli": "2.0.12",
-    "@typescript-eslint/eslint-plugin": "5.46.1",
-    "@typescript-eslint/parser": "5.46.1",
-    "eslint": "8.29.0",
+    "@latticexyz/cli": "2.2.3-main-5277399692c805c8b2b80274888bad3a7e527048",
     "mprocs": "^0.6.4",
     "rimraf": "^3.0.2",
-    "typescript": "5.1.6"
+    "typescript": "5.4.2"
   }
 }
