--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -38,13 +38,14 @@
     "@neoconfetti/svelte": "^1.0.0",
     "@supabase/supabase-js": "^2.39.3",
     "@types/jsonwebtoken": "^9.0.6",
-    "@wagmi/connectors": "^5.1.1",
-    "@wagmi/core": "^2.13.1",
+    "@wagmi/connectors": "^5.1.11",
+    "@wagmi/core": "^2.13.5",
     "jsonwebtoken": "^9.0.2",
     "prettier": "^3.3.2",
     "prettier-plugin-svelte": "^3.2.2",
     "prettier-plugin-tailwindcss": "^0.5.13",
     "rxjs": "7.5.5",
-    "tailwind-merge": "^2.3.0"
+    "tailwind-merge": "^2.3.0",
+    "vite-plugin-node-polyfills": "^0.22.0"
   }
 }
