--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -26,7 +26,7 @@
     "autoprefixer": "^10.4.19",
     "contracts": "workspace:*",
     "postcss": "^8.4.38",
-    "svelte": "5.0.0-next.155",
+    "svelte": "^5.0.0",
     "svelte-check": "^3.6.0",
     "tailwindcss": "^3.4.0",
     "tslib": "^2.4.1",
