--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -35,6 +35,7 @@
   },
   "type": "module",
   "dependencies": {
+    "@farcaster/frame-sdk": "^0.0.16",
     "@neoconfetti/svelte": "^1.0.0",
     "@supabase/supabase-js": "^2.39.3",
     "@types/jsonwebtoken": "^9.0.6",
