--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -19,34 +19,33 @@
     "@latticexyz/store-sync": "2.2.3-main-5277399692c805c8b2b80274888bad3a7e527048",
     "@latticexyz/utils": "2.2.3-main-5277399692c805c8b2b80274888bad3a7e527048",
     "@latticexyz/world": "2.2.3-main-5277399692c805c8b2b80274888bad3a7e527048",
-    "@sveltejs/adapter-auto": "^3.0.0",
-    "@sveltejs/kit": "^2.0.0",
-    "@sveltejs/vite-plugin-svelte": "^3.0.0",
-    "@zerodevx/svelte-toast": "^0.9.5",
-    "autoprefixer": "^10.4.19",
+    "@sveltejs/adapter-auto": "^3.3.1",
+    "@sveltejs/kit": "^2.12.1",
+    "@sveltejs/vite-plugin-svelte": "^5.0.2",
+    "@zerodevx/svelte-toast": "^0.9.6",
+    "autoprefixer": "^10.4.20",
     "contracts": "workspace:*",
-    "postcss": "^8.4.38",
-    "svelte": "^5.0.0",
-    "svelte-check": "^3.6.0",
-    "tailwindcss": "^3.4.0",
-    "tslib": "^2.4.1",
-    "viem": "^2.19.8",
-    "vite": "^5.0.3"
+    "postcss": "^8.4.49",
+    "svelte": "^5.14.3",
+    "svelte-check": "^3.8.6",
+    "tailwindcss": "^3.4.17",
+    "tslib": "^2.8.1",
+    "viem": "^2.21.55",
+    "vite": "^6.0.0"
   },
   "type": "module",
   "dependencies": {
     "@farcaster/frame-sdk": "^0.0.16",
     "@neoconfetti/svelte": "^1.0.0",
-    "@supabase/supabase-js": "^2.39.3",
-    "@types/jsonwebtoken": "^9.0.6",
-    "@wagmi/connectors": "^5.1.11",
-    "@wagmi/core": "^2.13.5",
+    "@supabase/supabase-js": "^2.47.8",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@wagmi/connectors": "^5.7.0",
+    "@wagmi/core": "^2.16.0",
     "jsonwebtoken": "^9.0.2",
-    "prettier": "^3.3.2",
+    "prettier": "^3.4.2",
     "prettier-plugin-svelte": "^3.2.2",
-    "prettier-plugin-tailwindcss": "^0.5.13",
+    "prettier-plugin-tailwindcss": "^0.5.14",
     "rxjs": "7.5.5",
-    "tailwind-merge": "^2.3.0",
-    "vite-plugin-node-polyfills": "^0.22.0"
+    "tailwind-merge": "^2.5.5"
   }
 }
