--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -35,6 +35,7 @@
   },
   "type": "module",
   "dependencies": {
+    "@farcaster/frame-node": "^0.0.13",
     "@farcaster/frame-sdk": "^0.0.20",
     "@neoconfetti/svelte": "^1.0.0",
     "@reown/appkit": "^1.6.3",
