--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -45,6 +45,7 @@
     "@wagmi/connectors": "^5.7.0",
     "@wagmi/core": "^2.16.0",
     "jsonwebtoken": "^9.0.2",
+    "postgres": "^3.4.5",
     "prettier": "^3.4.2",
     "prettier-plugin-svelte": "^3.2.2",
     "prettier-plugin-tailwindcss": "^0.5.14",
